# lineage-oracle

./: .gitignore  README.md  pyproject.toml
data/jaffle_shop/: build_warehouse.py
data/jaffle_shop/dags/: orders_ingest.py  payments_ingest.py  users_ingest.py
data/jaffle_shop/dbt_project/: .user.yml
docs/: ARCHITECTURE.md  EVALS.md
docs/superpowers/plans/: 2026-05-06-lineage-oracle.md
docs/superpowers/specs/: 2026-05-06-lineage-oracle-design.md
evals/: conftest.py  eval_set.json  test_evals.py
oracle/: agent.py  cli.py  runtime.py
oracle/graph/: builder.py  nodes.py  store.py
oracle/index/: descriptions.py  embeddings.py  store.py
oracle/ingest/: airflow.py  dbt.py  warehouse.py
oracle/tools/: definitions.py  lineage.py  references.py  schema.py  search.py
tests/: test_agent.py  test_cli.py
tests/graph/: test_builder.py  test_nodes.py  test_store.py
tests/index/: test_descriptions.py  test_embeddings.py  test_store.py
tests/ingest/: test_airflow.py  test_dbt.py  test_warehouse.py
tests/ingest/fixtures/: manifest_minimal.json  sample_dag.py
tests/tools/: test_definitions.py  test_lineage.py  test_references.py  test_schema.py  test_search.py
ui/: streamlit_app.py
